--- a/main_style.css
+++ b/main_style.css
@@ -14,6 +14,8 @@ html, body {
     overflow-y: scroll;
 }
 
+
+
 /* nav */
 nav>ul {
     display: flex;
@@ -36,6 +38,8 @@ nav>ul {
     background-color: #000;
 }
 
+
+
 /* #topics */
 #topics {
     margin: 2px;
@@ -51,8 +55,6 @@ nav>ul {
     flex: auto;
     max-width: 50%;
     max-height: 12rem;
-    overflow-y: hidden;
-    position: relative;
 }
 #topics>ul>li>a {
     display: block;
@@ -63,6 +65,7 @@ nav>ul {
     text-decoration: none;
     height: calc(100% - 1vmin);
     padding: 0 0.5rem;
+    overflow-y: hidden;
 }
 #topics>ul>li>a>h2 {
     line-height: 2rem;
@@ -73,11 +76,20 @@ nav>ul {
     text-overflow: ellipsis;
 }
 #topics>ul>li>a>p {
-    height: calc(100% - 4rem);
     overflow: hidden;
     text-overflow: ellipsis;
 }
+/*
+#topics>ul>li>a>p.omission {
+    background: linear-gradient(180deg, #ddd 6rem, transparent 7.2rem);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+}
+*/
+/*
 #topics>ul>li>div.gradientScreen {
+    display: none;
     position: absolute;
     top: 10rem;
     left: 0.6vmin;
@@ -86,6 +98,7 @@ nav>ul {
     border-radius: 1rem;
     background: linear-gradient(180deg, transparent, #333);
 }
+*/
 #topics>ul>li>a:hover, #topics>ul>li>a.active {
     border-radius: 1rem;
     color: #fff;
