--- a/account.css
+++ b/account.css
@@ -23,6 +23,9 @@ nav>ul {
     background-color: #333;
     color: #fff;
 }
+nav>ul>li.hidden {
+    display: none;
+}
 .nav_button {
     display: block;
     padding: 10px;
